--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,21 @@
 version: 0.2
 phases:
+  install:
+    run-as: root
+      commands:
+        - echo This is a installation
+        - wget https://services.gradle.org/distributions/gradle-7.4-all.zip
+        - unzip -d /opt/gradle gradle-7.4-all.zip
+    runtime-versions:
+      java: corretto17
   pre_build:
     commands:
       - echo Executing gradle clean
-      - gradle clean
+      - /opt/gradle/gradle-7.4/bin/gradle clean
       - echo Executing gradle build
-      - gradle build
+      - /opt/gradle/gradle-7.4/bin/gradle build
       - echo Executing gradle jar
-      - gradle jar
+      - /opt/gradle/gradle-7.4/bin/gradle jar
       - echo Logging in to Amazon ECR...
       - aws --version
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
