--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,18 @@ services:
       - MONGO_DATABASE=tweetsdb
     depends_on:
       - mongodb
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - 9090:9090
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - 3000:3000
 volumes:
   data: {}
 
